@@ -1,3 +1,6 @@
+2009-11-21 Chris Allegretta <chrisa@asty.org>
+	* rcfile.c: Add unbinding keyword, fixes Savannah bug 22852 reported by frankd.
+
 2009-11-19 Chris Allegretta <chrisa@asty.org>
 	* nano.c (die_save_file) Try nd match the permissions of the file we were
 	  editing but only make a minimal effort to do so. Fixes Savannah bug 27273
